--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: "Shriramtx"
+title: "Shriram's Curiosity Chronicles"
 layout: default
 pagination:
     enabled: true
-description: "Shriram's Curiosity Chronicles"
+description: "A chronicle of experiences, insights, and discoveries."
 ---
 
 
