--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@ description: "A chronicle of experiences, insights, and discoveries."
         text-align: justify;
         padding: 10px 20px;
         background-color: #f5f5f5; 
+        width: 100%;
+        margin: 0 auto;
       }
       
       .brand-banner img {
-        max-width: 80%;
+        max-width: 100%;
       }
     </style>
     
