added all posts

--- a/index copy 2.html
+++ b/index copy 2.html
@@ -17,7 +17,7 @@ description: "A chronicle of experiences, insights, and discoveries."
 <div class="row remove-site-content-margin brand-banner">
     
     <div class="row remove-site-content-margin brand-banner">
-        <a href="{{ site.baseurl }}"><img src="/assets/images/banner.avif" alt="/assets/images/jekyll"></a>
+        <a href="{{ site.baseurl }}"><img src="/assets/images/banner.avif" alt="Your brand logo"></a>
       </div>
       
       .brand-banner {
