--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: "Shriram's Curiosity Chronicles"
 layout: default
 pagination:
-    enabled: true
+    enabled: false
 description: "A chronicle of experiences, insights, and discoveries."
 ---
 
